instagram bot first day

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -100,6 +100,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-07 09:27:22,074 - INFO - Instabot version: 0.117.0 Started\n",
+      "2022-09-07 09:27:22,074 - INFO - Instabot version: 0.117.0 Started\n",
+      "2022-09-07 09:27:22,074 - INFO - Instabot version: 0.117.0 Started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your file is broken. We will delete it and try again.\n",
+      "We need to create a text file '/home/juan-garassino/code/juan-garassino/miniSeries/miniGan/notebooks/config/secret.txt' where we will store your login and password from Instagram.\n",
+      "Don't worry. It will be stored locally.\n",
+      "Enter your login: \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [4], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m bot \u001b[38;5;241m=\u001b[39m Bot()\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Login\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mbot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogin\u001b[49m\u001b[43m(\u001b[49m\u001b[43musername\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mINSTAGRAM_USER\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m          \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mINSTAGRAM_PASSW\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/miniGan/lib/python3.8/site-packages/instabot/bot/bot.py:443\u001b[0m, in \u001b[0;36mBot.login\u001b[0;34m(self, **args)\u001b[0m\n\u001b[1;32m    441\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mproxy:\n\u001b[1;32m    442\u001b[0m     args[\u001b[39m\"\u001b[39m\u001b[39mproxy\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mproxy\n\u001b[0;32m--> 443\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapi\u001b[39m.\u001b[39;49mlogin(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49margs) \u001b[39mis\u001b[39;00m \u001b[39mFalse\u001b[39;00m:\n\u001b[1;32m    444\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    445\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprepare()\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/miniGan/lib/python3.8/site-packages/instabot/api/api.py:219\u001b[0m, in \u001b[0;36mAPI.login\u001b[0;34m(self, username, password, force, proxy, use_cookie, use_uuid, cookie_fname, ask_for_code, set_device, generate_all_uuids, is_threaded)\u001b[0m\n\u001b[1;32m    204\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mlogin\u001b[39m(\n\u001b[1;32m    205\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m    206\u001b[0m     username\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    216\u001b[0m     is_threaded\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m    217\u001b[0m ):\n\u001b[1;32m    218\u001b[0m     \u001b[39mif\u001b[39;00m password \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 219\u001b[0m         username, password \u001b[39m=\u001b[39m get_credentials(username\u001b[39m=\u001b[39;49musername)\n\u001b[1;32m    221\u001b[0m     set_device \u001b[39m=\u001b[39m generate_all_uuids \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    222\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mset_user(username, password)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/miniGan/lib/python3.8/site-packages/instabot/api/prepare.py:24\u001b[0m, in \u001b[0;36mget_credentials\u001b[0;34m(username)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_credentials\u001b[39m(username\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m     23\u001b[0m     \u001b[39m\"\"\"Returns login and password stored in `secret.txt`.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m check_secret():\n\u001b[1;32m     25\u001b[0m         \u001b[39mpass\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/miniGan/lib/python3.8/site-packages/instabot/api/prepare.py:83\u001b[0m, in \u001b[0;36mcheck_secret\u001b[0;34m()\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mDon\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt worry. It will be stored locally.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     82\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m---> 83\u001b[0m     add_credentials()\n\u001b[1;32m     84\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mDo you want to add another account? (y/n)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     85\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m sys\u001b[39m.\u001b[39mstdin\u001b[39m.\u001b[39mreadline():\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/miniGan/lib/python3.8/site-packages/instabot/api/prepare.py:14\u001b[0m, in \u001b[0;36madd_credentials\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(SECRET_FILE, \u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m     13\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter your login: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 14\u001b[0m     f\u001b[39m.\u001b[39mwrite(\u001b[39mstr\u001b[39m(sys\u001b[39m.\u001b[39;49mstdin\u001b[39m.\u001b[39;49mreadline()\u001b[39m.\u001b[39mstrip()) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     15\u001b[0m     \u001b[39mprint\u001b[39m(\n\u001b[1;32m     16\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEnter your password: (it will not be shown due to security \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     17\u001b[0m         \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mreasons - just start typing and press Enter)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     18\u001b[0m     )\n\u001b[1;32m     19\u001b[0m     f\u001b[39m.\u001b[39mwrite(getpass\u001b[39m.\u001b[39mgetpass() \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Import instabot library\n",
+    "from instabot import Bot\n",
+    "import os\n",
+    "\n",
+    "# Create a variable bot.\n",
+    "bot = Bot()\n",
+    "\n",
+    "# Login\n",
+    "bot.login(username=os.environ.get('INSTAGRAM_USER'),\n",
+    "          password=os.environ.get('INSTAGRAM_PASSW'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo $INSTAGRAM_USER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'access_token': 'ACCESS-TOKEN',\n",
+       " 'graph_domain': 'https://graph.facebook.com/',\n",
+       " 'graph_version': 'v6.0',\n",
+       " 'endpoint_base': 'https://graph.facebook.com/v6.0/',\n",
+       " 'instagram_account_id': 'INSTAGRAM-BUSINESS-ACCOUNT-ID'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from miniGan.agent.utils import getCredentials\n",
+    "\n",
+    "getCredentials()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -108,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('mini-gan')",
+   "display_name": "Python 3.8.12 64-bit ('miniGan')",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +224,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a081cc40f906cfc60ff92163b09fdc0b2b441b55ddfe373c0fdf2ec279be83a1"
+    "hash": "a661a65f73cbfea893b3c22e588ac261746f0e3c9e4754dd49b50df45880a29d"
    }
   }
  },
