last push of today

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -108,7 +108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('mini-gan')",
+   "display_name": "Python 3.8.12 64-bit ('miniGan')",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +127,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a081cc40f906cfc60ff92163b09fdc0b2b441b55ddfe373c0fdf2ec279be83a1"
+    "hash": "a661a65f73cbfea893b3c22e588ac261746f0e3c9e4754dd49b50df45880a29d"
    }
   }
  },
